[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://font/retro.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 63
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 121
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 150.0
margin_right = 330.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
margin_left = 100.0
margin_top = 250.0
margin_right = 380.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 2 )
text = "SNEK!!!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 100.0
margin_top = 400.0
margin_right = 380.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 3 )
text = "Move the snake with your keyboard or by clicking in the general direction you want to go!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 150.0
margin_top = 650.0
margin_right = 330.0
margin_bottom = 700.0
custom_fonts/font = SubResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
